@@ -35,7 +35,7 @@
             
             			+'<p class="coin_info extra_margins" style="max-width: 600px; white-space: normal;"><span class="bitcoin">High Security Mode:</span><br />In High Security Mode, END-USERS MUST EDIT THIS APP\'S CONFIGURATION SETTINGS MANUALLY USING A TEXT EDITOR, to open / edit the config.php file AND the "plugins" folder (plug-conf.php files) in the main directory of this app. Don\'t forget to click "Save" in the text editor, AFTER you update the configuration file(s), AND EDIT *VERY CAREFULLY* TO AVOID CORRUPTING THE DATA FORMATTING.</p>'
             
-            			+'<p class="coin_info extra_margins" style="max-width: 600px; white-space: normal;"><span class="bitcoin">Enhanced Security Mode:</span><br />In Enhanced Security Mode, END-USERS MUST EDIT THIS APP\'S CONFIGURATION SETTINGS WITHIN THIS ADMIN INTERFACE AREA, BUT are required to click a "View Settings" button before each configuration section will load within this admin interface.<br /><br />Enhanced Security Mode is an extra security layer, that protects against CSRF attacks from "page scraping" sensitive user settings (a very rare / advanced attack, requiring the hacker to know your install\'s web address, AND they MUST trick YOU into visiting a malicious website which they control, AND you must be logged into the app\'s admin area).<br /><br />ALL ABOVE SAID, in my testing on protection against CSRF attacks, I found that the v6.00.8 upgrade (FIX) of this app to reliably using SAMESITE=STRICT COOKIES (in ALL Editions) AND SECURE COOKIES (in the Server Edition) TOTALLY BLOCKS ACCESS TO COOKIE DATA REMOTELY (so admin login access / user portfolio data access was NOT possible). This held true in my tests on google chrome / firefox.<br /><br />It\'s also worth noting here, that the COMPLETELY SEPERATE SETTING "access_control_origin" (further down in this "Security" configuration section), can COMPLETELY block all CSRF / XSS attacks on source files that use this setting (ajax / charts / portfolio and admin areas / etc), if set to \'strict\'. Just MAKE SURE YOU DO NOT have any domain redirects setup on your app server, OTHERWISE CHANGING THIS SETTING TO \'strict\' MAY BLOCK CHARTS / LOGS / NEW FEEDS / ADMIN SECTIONS FROM LOADING INSIDE THIS APP ITSELF.</p>'
+            			+'<p class="coin_info extra_margins" style="max-width: 600px; white-space: normal;"><span class="bitcoin">Enhanced Security Mode:</span><br />In Enhanced Security Mode, END-USERS MUST EDIT THIS APP\'S CONFIGURATION SETTINGS WITHIN THIS ADMIN INTERFACE AREA, BUT are required to click a "View Settings" button before each configuration section will load within this admin interface.<br /><br />Enhanced Security Mode is an extra security layer, that protects against CSRF attacks from "page scraping" sensitive user settings (a very rare / advanced attack, requiring the hacker to know your install\'s web address, AND they MUST trick YOU into visiting a malicious website which they control, AND you must be logged into the app\'s admin area).<br /><br />ALL ABOVE SAID, in my testing on protection against CSRF attacks, I found that the v6.00.8 upgrade (FIX) of this app to reliably using SAMESITE=STRICT COOKIES (in ALL Editions) AND SECURE COOKIES (in the Server Edition) TOTALLY BLOCKS ACCESS TO COOKIE DATA REMOTELY (so admin login access / user portfolio data access was NOT possible). This held true in my tests on google chrome / firefox. So PRACTICALLY speaking, "Enhanced" security mode is not needed, UNLESS you ADDITIONALLY want attack protection for <a href="https://en.wikipedia.org/wiki/Zero-day_(computing)" target="_blank">ZERO DAY</a> browser bugs.<br /><br />It\'s also worth noting here, that the COMPLETELY SEPERATE SETTING "access_control_origin" (further down in this "Security" configuration section), can COMPLETELY block all CSRF / XSS attacks on source files that use this setting (ajax / charts / portfolio and admin areas / etc), if set to \'strict\'. Just MAKE SURE YOU DO NOT have any domain redirects setup on your app server, OTHERWISE CHANGING THIS SETTING TO \'strict\' MAY BLOCK CHARTS / LOGS / NEW FEEDS / ADMIN SECTIONS FROM LOADING INSIDE THIS APP ITSELF.</p>'
             
             			+'<p class="coin_info extra_margins" style="max-width: 600px; white-space: normal;"><span class="bitcoin">Normal Security Mode:</span><br />In Normal Security Mode, END-USERS MUST EDIT THIS APP\'S CONFIGURATION SETTINGS WITHIN THIS ADMIN INTERFACE AREA. There are no ADDITIONAL security features other than the standard username / password / captcha login being required, to access the admin area settings / logs / system and visitor stats / any other admin-related data.</p>'
             
